--- a/Examen2Unidad2/Examen2Unidad2/Views/Shared/_Layout.cshtml
+++ b/Examen2Unidad2/Examen2Unidad2/Views/Shared/_Layout.cshtml
@@ -9,8 +9,8 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light ">
-            <a class="navbar-brand"  asp-area="" asp-controller="Home" asp-action="Index">Main</a>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-5">
+            <a class="navbar-brand text-light" asp-area="" asp-controller="Home" asp-action="Index">Main</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -20,7 +20,7 @@
                   
                     <li class="nav-item dropdown">
                             <a class="nav-link text-dark"> </a>
-                        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle mb-3 " id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Tasks
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
