--- a/Examen2Unidad2/Examen2Unidad2/Views/TODOes/Edit.cshtml
+++ b/Examen2Unidad2/Examen2Unidad2/Views/TODOes/Edit.cshtml
@@ -14,6 +14,11 @@
             </div>
             <div class="card-body">
                 <div class="form-group">
+                <label asp-for="TODOid" class="control-label"></label>
+                <input asp-for="TODOid" class="form-control" />
+                <span asp-validation-for="TODOid" class="text-danger"></span>
+                </div>
+                <div class="form-group">
                     <label asp-for="TODOName" class="control-label"></label>
                     <input asp-for="TODOName" class="form-control" />
                     <span asp-validation-for="TODOName" class="text-danger"></span>
