--- a/Examen2Unidad2/Examen2Unidad2/Views/TODOes/Index.cshtml
+++ b/Examen2Unidad2/Examen2Unidad2/Views/TODOes/Index.cshtml
@@ -15,20 +15,28 @@
         <a asp-action="Create" class="btn btn-outline-warning">Create New Task To Do</a>
 
     </div>
-    <div class="row search">
-        <div class="col-auto">
-            <input type="text" class="form-control-plaintext" id="txt-search" placeholder="Buscar" />
+
+    <div class="card-header text-center">
+
+        <div class="search text-center">
+            <input type="text" class="form-control-plaintext text-center mb-2" id="txt-search" placeholder="Buscar" />
+
+            <a class="btn btn-outline-success text-center align-content-center" onclick="busquedapag_search()" id="search-link"><i class="fas fa-search text-center align-content-center">Busqueda</i></a>
+            <a class="btn btn-outline-info text-center align-content-center" asp-area="" asp-controller="TODOes" asp-action="Index">Todos los registros</a>
+
         </div>
-        <div class="col-auto">
-            <a class="btn btn-outline-success" onclick="busquedapag_search" id="search-link"><i class="fas fa-search">Busqueda</i></a>
+
         </div>
-    </div>
 
         <div class="card-body text-center">
             <h6 class="card-text">This is a list with your tasks that you are going to do.</h6>
+
             <table class="table">
                 <thead>
                     <tr>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Result.SingleOrDefault().TODOid)
+                        </th>
                         <th>
                             @Html.DisplayNameFor(model => model.Result.SingleOrDefault().TODOName)
                         </th>
@@ -44,83 +52,83 @@
                 <tbody>
                     @foreach (var item in Model.Result)
                     {
-                        <tr>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.TODOName)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.TODOstart)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.TODOfinish)
-                            </td>
-                            <td>
-                                <a asp-action="Edit" asp-route-id="@item.TODOid" class="btn btn-outline-success">Edit</a>
-                                <a asp-action="Details" asp-route-id="@item.TODOid" class="btn btn-outline-info">Details</a>
-                                <a asp-action="Delete" asp-route-id="@item.TODOid" class="btn btn-outline-dark">Delete</a>
-                            </td>
-                        </tr>
-                    }
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.TODOName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TODOstart)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TODOfinish)
+            </td>
+            <td>
+                <br />
+                <a asp-action="Edit" asp-route-id="@item.TODOid" class="btn btn-outline-success">Edit</a>
+                <a asp-action="Details" asp-route-id="@item.TODOid" class="btn btn-outline-info">Details</a>
+                <a asp-action="Delete" asp-route-id="@item.TODOid" class="btn btn-outline-dark">Delete</a>
+            </td>
+        </tr>}
                 </tbody>
             </table>
         </div>
- </div>
+    </div>
 
 
     @if (Model.Result.Count() > 0)
     {
-        <span>
-            <strong>@Model.TotalRecords</strong> registros encontrados.
-        </span>
-        <span> | </span>
-        <span>
-            Pagina <strong>@Model.CurrentPage</strong> de
-            <strong>@Model.TotalPage</strong>
-        </span>
-        <span> | </span> }
-    else
-    {
-        <span>No hay resultados para esta busqueda</span>
-        <span> | </span>}
+<span>
+    <strong>@Model.TotalRecords</strong> registros encontrados.
+</span>
+                <span> | </span>
+                                <span>
+                                    Pagina <strong>@Model.CurrentPage</strong> de
+                                    <strong>@Model.TotalPage</strong>
+                                </span>
+                                                <span> | </span> }
+                                            else
+                                            {
+                                <span>No hay resultados para esta busqueda</span>
+                                                <span> | </span>}
 
     @if (Model.CurrentPage > 1)
     {
-        @Html.ActionLink("<<", "Index", new { Page = 1, Search = Model.Search },
-            new { @class = "btn btn-sm brn-default" }
-        )
+@Html.ActionLink("<<", "Index", new { Page = 1, Search = Model.Search },
+         new { @class = "btn btn-sm brn-default" }
+     )
 
-        <span></span>
-        @Html.ActionLink("Anterior", "Index", new { Page = Model.CurrentPage - 1, Search = Model.Search },
-        new { @class = "btn btn-sm brn-default" }
-         ) }
-    else
-    {
-        @Html.ActionLink("<<", "Index", new { Page = 1, Search = Model.Search },
-        new { @class = "btn btn-sm brn-default disabled" }
-        )
-        <span></span>
-        @Html.ActionLink("Anterior", "Index", new { Page = 1, Search = Model.Search },
-       new { @class = "btn btn-sm brn-default disabled" }
-       )}
+                <span></span>
+                                @Html.ActionLink("Anterior", "Index", new { Page = Model.CurrentPage - 1, Search = Model.Search },
+                                     new { @class = "btn btn-sm brn-default" }
+                                      ) }
+                            else
+                            {
+                @Html.ActionLink("<<", "Index", new { Page = 1, Search = Model.Search },
+                     new { @class = "btn btn-sm brn-default disabled" }
+                     )
+                                <span></span>
+                                                @Html.ActionLink("Anterior", "Index", new { Page = 1, Search = Model.Search },
+                                                    new { @class = "btn btn-sm brn-default disabled" }
+                                                    )}
 
     <span></span>
 
     @if (Model.CurrentPage < Model.TotalPage)
     {
-        @Html.ActionLink("Siguiente", "Index", new { Page = Model.CurrentPage + 1, Search = Model.Search },
-            new { @class = "btn btn-sm brn-default" }
-        )
-        <span></span>
-        @Html.ActionLink(">>", "Index", new { Page = Model.TotalPage, Search = Model.Search },
-       new { @class = "btn btn-sm brn-default" }
-       ) }
-    else
-    {
-        @Html.ActionLink("Siguiente", "Index", new { Page = Model.CurrentPage - 1, Search = Model.Search },
-        new { @class = "btn btn-sm brn-default disabled" }
-       )
-        <span></span>
-        @Html.ActionLink(">>", "Index", new { Page = Model.TotalPage, Search = Model.Search },
-         new { @class = "btn btn-sm brn-default disabled" }
-       )}
+@Html.ActionLink("Siguiente", "Index", new { Page = Model.CurrentPage + 1, Search = Model.Search },
+         new { @class = "btn btn-sm brn-default" }
+     )
+                <span></span>
+                                @Html.ActionLink(">>", "Index", new { Page = Model.TotalPage, Search = Model.Search },
+                                    new { @class = "btn btn-sm brn-default" }
+                                    ) }
+                            else
+                            {
+                @Html.ActionLink("Siguiente", "Index", new { Page = Model.CurrentPage - 1, Search = Model.Search },
+                     new { @class = "btn btn-sm brn-default disabled" }
+                    )
+                                <span></span>
+                                                @Html.ActionLink(">>", "Index", new { Page = Model.TotalPage, Search = Model.Search },
+                                                      new { @class = "btn btn-sm brn-default disabled" }
+                                                    )}
     <script src="~/js/Busquedapag.js" asp-append-version="true"></script>
