--- a/Examen2Unidad2/Examen2Unidad2/Views/DONEs/Delete.cshtml
+++ b/Examen2Unidad2/Examen2Unidad2/Views/DONEs/Delete.cshtml
@@ -34,6 +34,12 @@
                 <dd class="col-sm-10">
                     @Html.DisplayFor(model => model.doneDATE)
                 </dd>
+                dt class="col-sm-3">
+                @Html.DisplayNameFor(model => model.project.projectNAME)
+                </dt>
+                <dd class="col-sm-9">
+                    @Html.DisplayFor(model => model.project.projectNAME)
+                </dd>
             </dl>
 
         </div>
