--- a/Examen2Unidad2/Examen2Unidad2/Views/TODOes/Index.cshtml
+++ b/Examen2Unidad2/Examen2Unidad2/Views/TODOes/Index.cshtml
@@ -35,9 +35,6 @@
                 <thead>
                     <tr>
                         <th>
-                            @Html.DisplayNameFor(model => model.Result.SingleOrDefault().TODOid)
-                        </th>
-                        <th>
                             @Html.DisplayNameFor(model => model.Result.SingleOrDefault().TODOName)
                         </th>
                         <th>
@@ -46,29 +43,35 @@
                         <th>
                             @Html.DisplayNameFor(model => model.Result.SingleOrDefault().TODOfinish)
                         </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Result.SingleOrDefault().project.projectNAME)
+                        </th>
                         <th></th>
                     </tr>
                 </thead>
                 <tbody>
                     @foreach (var item in Model.Result)
                     {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.TODOName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TODOstart)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TODOfinish)
-            </td>
-            <td>
-                <br />
-                <a asp-action="Edit" asp-route-id="@item.TODOid" class="btn btn-outline-success">Edit</a>
-                <a asp-action="Details" asp-route-id="@item.TODOid" class="btn btn-outline-info">Details</a>
-                <a asp-action="Delete" asp-route-id="@item.TODOid" class="btn btn-outline-dark">Delete</a>
-            </td>
-        </tr>}
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.TODOName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.TODOstart)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.TODOfinish)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.project.projectNAME)
+                        </td>
+                        <td>
+                            <br />
+                            <a asp-action="Edit" asp-route-id="@item.TODOid" class="btn btn-outline-success">Edit</a>
+                            <a asp-action="Details" asp-route-id="@item.TODOid" class="btn btn-outline-info">Details</a>
+                            <a asp-action="Delete" asp-route-id="@item.TODOid" class="btn btn-outline-dark">Delete</a>
+                        </td>
+                    </tr>}
                 </tbody>
             </table>
         </div>
