--- a/Examen2Unidad2/Examen2Unidad2/Views/DOINGs/Create.cshtml
+++ b/Examen2Unidad2/Examen2Unidad2/Views/DOINGs/Create.cshtml
@@ -24,6 +24,10 @@
                     <span asp-validation-for="doingSTATUS" class="text-danger"></span>
                 </div>
                 <div class="form-group">
+                    <label asp-for="projectID" class="control-label"></label>
+                    <select asp-for="projectID" class="form-control" asp-items="ViewBag.projectID"></select>
+                </div>
+                <div class="form-group">
 
                     <input type="submit" value="Create" class="btn btn-outline-warning btn-lg" />
 
