--- a/Examen2Unidad2/Examen2Unidad2/Views/DOINGs/Details.cshtml
+++ b/Examen2Unidad2/Examen2Unidad2/Views/DOINGs/Details.cshtml
@@ -26,6 +26,12 @@
                 <dd class="col-sm-10">
                     @Html.DisplayFor(model => model.doingSTATUS)
                 </dd>
+                <dt class="col-sm-3">
+                    @Html.DisplayNameFor(model => model.project.projectNAME)
+                </dt>
+                <dd class="col-sm-9">
+                    @Html.DisplayFor(model => model.project.projectNAME)
+                </dd>
             </dl>
             <a asp-action="Edit" asp-route-id="@Model.doingID" class="btn btn-outline-success">Edit</a> 
 
