--- a/Examen2Unidad2/Examen2Unidad2/Views/DONEs/Index.cshtml
+++ b/Examen2Unidad2/Examen2Unidad2/Views/DONEs/Index.cshtml
@@ -35,9 +35,6 @@
                 <thead>
                     <tr>
                         <th>
-                            @Html.DisplayNameFor(model => model.Result.SingleOrDefault().doneID)
-                        </th>
-                        <th>
                             @Html.DisplayNameFor(model => model.Result.SingleOrDefault().DONEName)
                         </th>
                         <th>
@@ -46,28 +43,34 @@
                         <th>
                             @Html.DisplayNameFor(model => model.Result.SingleOrDefault().doneDATE)
                         </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Result.SingleOrDefault().project.projectNAME)
+                        </th>
                         <th></th>
                     </tr>
                 </thead>
                 <tbody>
                     @foreach (var item in Model.Result)
                     {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.DONEName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.doneSTATUS)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.doneDATE)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.doneID" class="btn btn-outline-success">Edit</a>
-                <a asp-action="Details" asp-route-id="@item.doneID" class="btn btn-outline-info">Details</a>
-                <a asp-action="Delete" asp-route-id="@item.doneID" class="btn btn-outline-dark">Delete</a>
-            </td>
-        </tr>
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.DONEName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.doneSTATUS)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.doneDATE)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.project.projectNAME)
+                        </td>
+                        <td>
+                            <a asp-action="Edit" asp-route-id="@item.doneID" class="btn btn-outline-success">Edit</a>
+                            <a asp-action="Details" asp-route-id="@item.doneID" class="btn btn-outline-info">Details</a>
+                            <a asp-action="Delete" asp-route-id="@item.doneID" class="btn btn-outline-dark">Delete</a>
+                        </td>
+                    </tr>
 }
                 </tbody>
             </table>
