--- a/Examen2Unidad2/Examen2Unidad2/Views/Shared/_Layout.cshtml
+++ b/Examen2Unidad2/Examen2Unidad2/Views/Shared/_Layout.cshtml
@@ -24,11 +24,13 @@
                             Tasks
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" asp-area="" asp-controller="projects" asp-action="Index">PROJECT</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" asp-area="" asp-controller="DOINGs" asp-action="Index">Doing</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" asp-area="" asp-controller="DONEs" asp-action="Index">Done</a>
+                            <div class="dropdown-divider"></div>
                             <a class="dropdown-item" asp-area="" asp-controller="TODOes" asp-action="Index">To do</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item"  asp-area="" asp-controller="DOINGs" asp-action="Index">Doing</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item"  asp-area="" asp-controller="DONEs" asp-action="Index">Done</a>
                         </div>
                     </li>
                     </ul>
