--- a/Examen2Unidad2/Examen2Unidad2/Views/DONEs/Edit.cshtml
+++ b/Examen2Unidad2/Examen2Unidad2/Views/DONEs/Edit.cshtml
@@ -32,6 +32,10 @@
                 <span asp-validation-for="doneDATE" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="projectID" class="control-label"></label>
+                <select asp-for="projectID" class="form-control" asp-items="ViewBag.projectID"></select>
+            </div>
+            <div class="form-group">
 
                 <input type="submit" value="Edit" class="btn btn-outline-success btn-lg" />
 
