--- a/Examen2Unidad2/Examen2Unidad2/Views/TODOes/Edit.cshtml
+++ b/Examen2Unidad2/Examen2Unidad2/Views/TODOes/Edit.cshtml
@@ -33,6 +33,10 @@
                     <input asp-for="TODOfinish" class="form-control" />
                     <span asp-validation-for="TODOfinish" class="text-danger"></span>
                 </div>
+                <div class="form-group">
+                    <label asp-for="projectID" class="control-label"></label>
+                    <select asp-for="projectID" class="form-control" asp-items="ViewBag.projectID"></select>
+                </div>
 
                 <input type="submit" value="Edit" class="btn btn-outline-success btn-lg" />
 
